change listmenucontainer padding to prevent scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,8 @@
   flex-direction: column;
   justify-content: space-between;
   height: 90vh;
+  margin: 0vh 2vw 0vh 2vw;
   width: 96vw;
-  margin: 2vh 2vw 2vh 2vw;
 }
 
 .ListMenuDelete {
